# esp32-rtype

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  partitions-cyd.csv  partitions.csv  platformio.ini  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.esp32-s3-8048s043c-rtype
components_tab5/m5stack_tab5/: CMakeLists.txt  idf_component.yml
components_tab5/m5stack_tab5/include/bsp/: display.h
docs/: README.md  bringup-plan.md  cyd-blitter-plan.md  rom-layout.md  source-layout.md
docs/boards/: esp32-cyd-2432s028.md  esp32-s3-8048s043c.md  index.md  m5stack-tab5-esp32p4.md
host/: rtype_host_harness.cpp
include/: board_profiles.h  hw.h  rtype_board.h
include/boards/: esp32_2432s028.h  esp32_8048s043c.h
lib/lcd_cyd/: CMakeLists.txt  idf_component.yml  lcd_cyd.c
lib/lcd_cyd/include/: lcd_cyd.h
roms/: README.md
src/: CMakeLists.txt  app_main.c  rtype_blit.c  rtype_blit.h  rtype_cyd_frames.c  rtype_cyd_frames.h  rtype_display.h  rtype_display_cyd.c  rtype_display_s3.c  rtype_display_tab5.c  rtype_i86_cpu.c  rtype_i86_cpu.h  rtype_m72_core.c  rtype_m72_core.h  rtype_m72_video.c  rtype_m72_video.h  rtype_rom.c  rtype_rom.h  rtype_video.c  rtype_video.h
tools/: README.md  capture_s3_playfield.py  compare_s3_host.py  inspect_rtype.ts  pack_cyd_storage.ts  pack_rtype.ts  render_gfx_atlas.ts  rtype_manifest.ts  smoke_s3.py
